# bms-resource-toolbox-tauri

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  IMPLEMENTATION_REPORT_move_works_with_same_name.md  LEGACY_MIGRATION_SUMMARY.md  deno.json  deny.toml  eslint-plugin-svelte-tailwind-canonical.ts  eslint.config.js  eslint.config.ts  package.json  svelte.config.ts  tsconfig.json  tsconfig.scripts.json  vite-plugin-generate-commands.ts  vite.config.ts
.github/workflows/: cargo-deny.yml  ci.yml
scripts/: generate-command-registry.ts
src/: main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bms.rs  commands.rs  fs.rs  lib.rs  main.rs  options.rs
src-tauri/src/bms/: work.rs
src-tauri/src/commands/: bms.rs  bms_event.rs  fs.rs  pack.rs  rawpack.rs  root.rs  root_event.rs  work.rs
src-tauri/src/fs/: moving.rs  rawpack.rs  sync.rs
src-tauri/src/media/: audio.rs  video.rs
src-tauri/src/options/: bms_event.rs  pack.rs  rawpack.rs  root.rs  root_bigpack.rs  root_event.rs  work.rs
src/lib/components/command/: CommandCard.svelte  CommandDialog.svelte  EnumSelect.svelte  FilePicker.svelte  ParameterInput.svelte  ResultDisplay.svelte
src/lib/components/layout/: CategorySidebar.svelte  CommandListPanel.svelte  HistoryPanel.svelte
src/lib/data/: commandRegistry.generated.ts  commandRegistry.ts  dangerousCommands.ts
src/lib/stores/: commandStore.svelte.ts  historyStore.svelte.ts
src/lib/types/: api.ts  commands.ts  enums.ts
src/lib/utils/: bmsEventHelper.generated.ts  bmsEventHelper.ts  commandInvoker.ts  commandParameters.ts  fileDialog.ts  progress.ts
src/lib/utils/bigpack/: index.ts  merge.ts  similarity.ts  split.ts
src/lib/utils/bms/: encoding.ts  folder.ts  index.ts  parser.ts  scanner.ts  types.ts  work.ts
src/lib/utils/event/: folder.ts  index.ts  jumpToWorkInfo.ts  table.ts
src/lib/utils/fs/: archive.ts  cleanup.ts  compare.ts  hash.ts  index.ts  moving.ts  name.ts  path.ts  similarity.ts  sync.ts
src/lib/utils/media/: audio.ts  cleanup.ts  concurrency.ts  index.ts  presets.ts  probe.ts  processRunner.ts  types.ts  video.ts
src/lib/utils/pack/: index.ts  pack.ts
src/lib/utils/rawpack/: index.ts  numbering.ts  unzip.ts
src/lib/utils/root/: batch.ts  index.ts  similarity.ts
src/lib/utils/system/: check.ts  index.ts
src/lib/utils/wasted/: aery_fix.ts  index.ts
src/lib/utils/work/: index.ts  rename.ts
src/routes/: +layout.svelte  +page.svelte
