[package]
name = "bms-resource-toolbox"
description = "A Tauri App"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bms_resource_toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true , features = [] }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Common dependencies
tokio = { workspace = true }
sha3 = { workspace = true }
num_cpus = { workspace = true }
futures = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# BMS
bms-rs = { workspace = true }
encoding_rs = { workspace = true }

# Zip
zip = { workspace = true }
sevenz-rust2 = { workspace = true }
unrar = { workspace = true }

# FS
which = { workspace = true }
strsim = { workspace = true }
xlsxwriter = { workspace = true }

# GUI
clap = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
rfd = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# Tempfile
tempfile = { workspace = true }

[lints]
workspace = true
